--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>移动端应用1</title>
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="js/rem.js" />
+    <script src="js/rem.js"></script>
 </head>
 <body>
 <!-- Swiper -->
 <div class="main">
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" style="background-image:url(img/01.jpg); background-size:100% 10rem">Slide 1</div>
-            <div class="swiper-slide" style="background-image:url(img/02.jpg); background-size:100% 10rem">Slide 2</div>
-            <div class="swiper-slide" style="background-image:url(img/03.jpg); background-size:100% 10rem">Slide 3</div>
+            <div class="swiper-slide" style="background-image:url(img/01.jpg); background-size:100% 2rem">Slide 1</div>
+            <div class="swiper-slide" style="background-image:url(img/02.jpg); background-size:100% 2rem">Slide 2</div>
+            <div class="swiper-slide" style="background-image:url(img/03.jpg); background-size:100% 2rem">Slide 3</div>
         </div>
         <!-- Add Arrows -->
         <div class="swiper-button-next"></div>
@@ -50,32 +50,4 @@
 <script src="js/swiper.min.js"></script>
 <script src="js/hammer.js"></script>
 <script src="js/index.js"></script>
-<script>
-$("#button").click(function () {
-    var text=$("#text").val();
-    $("#text").val("");
-    if(text===""){
-        return;
-    }
-    var time=new Date().getTime();
-    var data=getdata();
-    var color=getcolor();
-    data.push({con:text,time:time,isStar:0,isDown:0,color});
-    savedata(data);
-    rewrite();
-    $(".edit").removeClass("show").parent().hide().prev().css("filter","");
-
-});
-//删除信息
-$(".content").on("click",".del",function () {
-    var data=getdata();
-    var index=$(this).parent().attr("id");
-    data.reverse();    //数字的顺序颠倒
-    data.splice(index,1);
-    data.reverse();
-    savedata(data);
-    rewrite();
-});
-
-</script>
 </html>
